--- a/style.css
+++ b/style.css
@@ -142,7 +142,8 @@ h1{
     }
     .logo{
         width: 100%;
-        margin: 70px 0 20px;
+        margin: 0;
+        margin-bottom: 20px;
     }
 
 }
