--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ h1{
     .logo{
         width: 100%;
         margin: 0;
-        margin-bottom: 20px;
+        margin: 20px 0;
     }
 
 }
@@ -164,18 +164,7 @@ h1{
     .dato input{
         height: 25px;
     }
-    .redes a img{
-        width: 15px;
-    }
-    .logo img{
-        width: 80px;
-    }
-    .logo{
-        margin: 0;
-    }
-    main h1{
-        margin-bottom: 10px;
-    }
+
 }
 @media (max-width: 457px){
     main h1{
