--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body::before {
     left: 0;
     right: 0;
     background: rgba(5, 5, 5, 0.644);
+    background-attachment: fixed;
 }
 .logo>img{
     width: 150px;
@@ -144,7 +145,7 @@ h1{
     .logo{
         width: 100%;
         margin: 0;
-        margin: 20px 0;
+        margin-bottom: 20px;
     }
 
 }
@@ -164,7 +165,18 @@ h1{
     .dato input{
         height: 25px;
     }
-
+    /* .redes a img{
+        width: 15px;
+    }
+    .logo img{
+        width: 80px;
+    }
+    .logo{
+        margin: 0;
+    }
+    main h1{
+        margin-bottom: 10px;
+    } */
 }
 @media (max-width: 457px){
     main h1{
