--- a/style.css
+++ b/style.css
@@ -172,11 +172,14 @@ h1{
     }
     .logo{
         margin: 0;
-        margin-top: 10px;
+        margin: 3% 0;
     }
     main h1{
         margin-bottom: 10px;
-        font-size: 23px;
+        font-size: 21px;
+    }
+    .button-caja .button{
+        padding: 5px;
     }
 }
 @media (max-width: 457px){
