--- a/style.css
+++ b/style.css
@@ -17,8 +17,6 @@ body {
     background-attachment: fixed;
     color: var(--color3);
     font-family: var(--font);
-
- 
 }
 body::before {
     content: '';
@@ -29,7 +27,9 @@ body::before {
     left: 0;
     right: 0;
     background: rgba(5, 5, 5, 0.644);
-}
+    width:100%;
+    height:100%;
+} 
 .logo>img{
     width: 150px;
 
