--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     background-attachment: fixed;
     color: var(--color3);
     font-family: var(--font);
+
 }
 body::before {
     content: '';
@@ -27,8 +28,8 @@ body::before {
     left: 0;
     right: 0;
     background: rgba(5, 5, 5, 0.644);
-    width:100%;
-    height:100%;
+    width: 100vw;
+    height: 100vh;
 } 
 .logo>img{
     width: 150px;
