--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ body::before {
     left: 0;
     right: 0;
     background: rgba(5, 5, 5, 0.644);
-    width: 100vw;
-    height: 100vh;
+    width:100%;
+    height:200%;
 } 
 .logo>img{
     width: 150px;
