--- a/style.css
+++ b/style.css
@@ -11,7 +11,12 @@
     margin: 0;
 }
 body {
-    background-image: url(img/background5.jpg);
+    background-image: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url(img/background5.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
