--- a/style.css
+++ b/style.css
@@ -38,10 +38,11 @@ body {
 }  */
 .logo>img{
     width: 150px;
+    border-radius: 50%;
 
 }
 .logo{
-    margin: 15px;
+    margin: 20px;
     width: 150px;
     text-align: center;
 }
@@ -198,6 +199,13 @@ h1{
     }
     .checks{
         margin-right: 140px;
+    }
+    .body{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
     }
 }
 @media (max-width: 375px){
