--- a/style.css
+++ b/style.css
@@ -153,6 +153,19 @@ h1{
         margin: 0;
         margin-bottom: 20px;
     }
+    .body{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+    }
+    .dato input{
+        margin: 10px;
+    }
+    .check label{
+        margin: 5px 0 0;
+    }
 
 }
 @media (max-width: 630px){
@@ -160,30 +173,31 @@ h1{
         font-size: 28px;
     }
     main>p{
-        font-size: 18px;
+        font-size: 20px;
     }
     .check label{
-        font-size: 15px;
+        font-size: 18px;
     }
     .check{
-        width: 220px;
+        width: 250px;
     }
     .dato input{
         height: 25px;
     }
     .redes a img{
-        width: 15px;
+        width: 20px;
+        margin: 3px 1px;
     }
     .logo img{
-        width: 80px;
+        width: 100px;
     }
     .logo{
         margin: 0;
-        margin: 3% 0;
+        margin: 5% 0;
     }
     main h1{
         margin-bottom: 10px;
-        font-size: 21px;
+        
     }
     .button-caja .button{
         padding: 5px;
@@ -194,20 +208,48 @@ h1{
 }
 @media (max-width: 457px){
     main>p{
-        font-size: 15px;
-        margin-left: 10px;
+        font-size: 18px;
+        margin-left: 20px;
     }
     .checks{
-        margin-right: 140px;
+        margin-left: 90px;
     }
 }
 @media (max-width: 375px){
     .checks{
-        margin-right: 125px;
+        margin-left: 130px;
     }
 }
 @media (max-width: 360px){
     .checks{
-        margin: 0;
+        margin-left: 150px;
     }
 }
+@media(max-height: 350px){
+    .logo{
+        display: none;
+    }
+    main h1{
+        font-size: 19px;
+    }
+    main p{
+        font-size: 12px;
+    }
+    .check label{
+        font-size: 12px;
+    }
+    .checks{
+        margin: 0;
+        margin-left: 125px;
+    }
+    .dato input{
+        height: 19px;
+        margin: 3px;
+    }
+    .dato input::placeholder{
+        font-size: 14px;
+    }
+    .button-caja .button{
+        padding: 3px;
+    }
+} 
